# tauri-kit

./: LICENSE  README.md  tauri-kit-0.1.0-1.fc41.src.rpm  tauri-kit-0.1.0.spec
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
