[package]
name = "tauri-kit"
version = "0.1.0"
description = "A basic GUI for Tauri development"
authors = ["苏怀安"]
edition = "2021"

[package.metadata.generate-rpm]
name = "tauri-kit"
version = "0.1.0"
summary = "A basic GUI for Tauri development"
description = "A basic GUI for Tauri development"
authors = ["苏怀安"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_kit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
